--- a/Proyecto1/public/css/styles.css
+++ b/Proyecto1/public/css/styles.css
@@ -28,7 +28,7 @@ html, body {
 }
 
 
-/* Estilos para la barra de navegación */
+/* Estilos para la barra de navegación. */
 
 /* Estilos para registro y login */
 .contenedor-signup {
