--- a/Proyecto1/public/css/styles.css
+++ b/Proyecto1/public/css/styles.css
@@ -1,8 +1,8 @@
 :root {
     --color-white: #FFFFFF;       /*Color de la barra de navegación y recuadros de formularios*/
     --color-background: #f4f5f7;  /* Color de fondo */
-    --color-primary: #83c427;     /* Color verde para botones importantes     */
-    --color-dark: #202020;        /* Color negro para textos */
+    --color-primary: #83c427;     /* Color verde para botones importantes */
+    --color-dark: #202020;        /* Color "negro" para textos */
     --color-link: #3379dd;        /* Color azul para letra con interacción */
     --color-link-hover: #082854;  /* Color azul oscuro para letra con interacción en la barra de navegación */
 }
@@ -28,7 +28,24 @@ html, body {
 }
 
 
+
 /* Estilos para la barra de navegación. */
+
+/* Estilos para la barra de navegación */
+nav {
+    background-color: var(--color-white);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+    height: 50px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
 
 /* Estilos para registro y login */
 .contenedor-signup {
