--- a/Proyecto1/public/css/cardItem.css
+++ b/Proyecto1/public/css/cardItem.css
@@ -64,7 +64,6 @@ div, div, ul, li {
 }
 
 .card-estado{
-    border:1px solid firebrick; 
     position: absolute; 
     bottom: 0; 
     left:0; 
@@ -72,6 +71,6 @@ div, div, ul, li {
     height: 15px; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
                 0 2px 4px rgba(0, 0, 0, 0.06); /* shadow-md */
-    border-radius: 0.75rem;                      /* rounded-xl */
+    border-radius: 0 0 0.75rem 0.75rem;                    /* rounded-xl */
     padding: 0.5rem;                             /* p-2 */  
 }
