--- a/Proyecto1/public/css/styles.css
+++ b/Proyecto1/public/css/styles.css
@@ -29,7 +29,7 @@ html, body {
 
 
 /* Estilos para la barra de navegación */
-nav {
+navbar {
     background-color: var(--color-white);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -40,7 +40,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 1000;  
 }
 
 .nav-links {
