--- a/Proyecto1/public/css/styles.css
+++ b/Proyecto1/public/css/styles.css
@@ -15,11 +15,11 @@ html, body {
     padding: 0;
 }
 
-.contenedorNavBar { 
+/* .contenedorNavBar { 
     border: 1px solid green; 
     width: 100%; 
     height: 50px; 
-}
+} */
 
 .fondo {
     border: 1px solid red;
@@ -29,7 +29,7 @@ html, body {
 
 
 /* Estilos para la barra de navegación */
-nav {
+navbar {
     background-color: var(--color-white);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -41,6 +41,27 @@ nav {
     top: 0;
     width: 100%;
     z-index: 1000;
+}
+
+.navbar-container {
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    width: 100%;
+}
+
+.navbar-right {
+    display: flex;
+    align-items: center;
+    width: 20%;
+    gap: 2rem;
+}
+
+.navbar-left {
+    display: flex;
+    align-items: center;
+    width: 80%;
+    gap: 2rem;
 }
 
 .nav-links {
@@ -61,10 +82,15 @@ nav {
 }
 
 .nav-brand {
-    font-weight: bold;
+    /* font-weight: bold;
     font-size: 1.2rem;
     color: var(--color-dark);
-    text-decoration: none;
+    text-decoration: none; */
+    display: flex;
+    align-items: center;
+    height: 10px; /* Ajusta según el tamaño de tu logo */
+    width: auto;
+    object-fit: contain;
 }
 
 .nav-user {
