--- a/Proyecto1/public/css/homePageBlade.css
+++ b/Proyecto1/public/css/homePageBlade.css
@@ -97,7 +97,7 @@ h2{
 
 @media (min-width: 768px) {
     .gridCardsProyectos {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -130,6 +130,9 @@ h2{
     /* xl */
     .container {
         max-width: 1280px;
+    }
+    .gridCardsProyectos {
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
