--- a/Proyecto1/storage/assets/css/perfilBlade.css
+++ b/Proyecto1/storage/assets/css/perfilBlade.css
@@ -40,13 +40,14 @@
     flex-wrap: wrap;
 }
 .campoTexto {
-        width: 100%;
-        /*padding: 10px;*/
+        width: 60%;
         border: 1px solid #ccc;
         border-radius: 8px;
         font-size: 16px;
         box-sizing: border-box;
         resize: none;
+        height: 30px; 
+        padding-inline-start: 2%;
     }
 .botonPersonalizado {
     height: fit-content;
@@ -80,6 +81,10 @@
     width: 80%; 
 }
 
+.textoBtns{
+    width: 75%; 
+    cursor: pointer;
+}
 
 @media (min-width: 0px) {
     .contendorFoto{
