--- a/Proyecto1/storage/assets/css/crearProyecto.css
+++ b/Proyecto1/storage/assets/css/crearProyecto.css
@@ -152,7 +152,7 @@ input[type="submit"] {
 
 form button:hover,
 input[type="submit"]:hover {
-    background-color: var(--color-primary-modifier);
+    background-color: var(--color-primary-hover);
 }
 
 form > div > div:nth-child(2) > a {
