--- a/Proyecto1/storage/assets/css/vistaGlobal.css
+++ b/Proyecto1/storage/assets/css/vistaGlobal.css
@@ -9,40 +9,46 @@ main {
 }
 
 main {
-    display: grid;
-    grid-template-columns: 300px 1fr;
+    height: 90vh;
+    padding: 3%;
 }
 
+#grid-container {
+    height: 90%;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    gap: 50px;
+}
+
+/*   TABS CONTAINER   */
 #tab-container {
     width: 100%;
-    margin-top: 30px;
-    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: space-evenly;
     background-color: var(--color-background);
 }
 
 .tabs-btn {
-    background-color: var(--color-background);
-    padding: 5px 20px;
-    border: 0;
-    border-bottom: 1px solid var(--color-dark);
+    background-color: var(--color-white);
+    padding: 10px 15px;
+    border-radius: 10px;
     cursor: pointer;
     margin: 0;
 
     transition: all 400ms;
+
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .tabs-btn:hover {
     background-color: var(--color-primary-hover);
-    border-bottom: 1px solid var(--color-primary-hover);
 }
 
 .btn-active,
 .btn-active:hover {
     background-color: var(--color-primary);
-    border-bottom: 1px solid var(--color-primary);
 }
 
 .tabs-content {
@@ -50,5 +56,78 @@ main {
 }
 
 .content-active {
-    display: grid;
+    display: flex;
+}
+
+/*   CONTENT CONTAINER   */
+#main-content {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    background-color: var(--color-white);
+    width: 100%;
+    max-height: 1000px;
+    overflow-y: auto;
+    padding: 20px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+/*  SEARCH FORM  */
+form {
+    display: flex;
+    max-height: 35px;
+}
+
+#buscar {
+    border: 1px solid black;
+    max-height: 35px;
+    padding: 0 5px;
+    width: 50%;
+    max-width: 300px;
+    min-width: 150px;
+}
+
+#search-btn {
+    background-color: var(--color-primary);
+    max-height: 35px;
+    padding: 0 10px;
+}
+
+svg {
+    width: 20px;
+    max-height: 35px;
+}
+
+/*   SECTION 1   */
+.content-section-1 {
+    max-width: 100%;
+    flex-wrap: wrap;
+    justify-content: stretch;
+    gap: 20px;
+}
+
+.member {
+    flex: 1;
+    min-width: 300px;
+}
+
+.member:last-child {
+    flex: 1;
+}
+
+@media (width < 600px) {
+    #grid-container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        gap: 35px;
+        margin-top: 20px;
+    }
+
+    #tab-container {
+        flex-direction: row;
+        row-gap: 20px;
+    }
 }
