Se modifica env xq habia una password erronea, Se arregla bug de  tarjeta de proyectos(Se cerraba la tarjeta clicando el fondo de estado. Se borra la view de proyectos a causa de redundancia con el dash. Se añade boto de crear proyectos con popout y enlazado. Se modifica Perfil para poner los datos del usuario en los campos.)

--- a/Proyecto1/storage/assets/css/perfilBlade.css
+++ b/Proyecto1/storage/assets/css/perfilBlade.css
@@ -49,6 +49,10 @@
         height: 30px; 
         padding-inline-start: 2%;
     }
+.password-textarea {
+    -webkit-text-security: disc;
+}
+
 .botonPersonalizado {
     height: fit-content;
     width: 150px;
