--- a/Proyecto1/storage/assets/css/taskItemProject.css
+++ b/Proyecto1/storage/assets/css/taskItemProject.css
@@ -33,8 +33,7 @@
 }
 
 .tags {
-    background-color: #d9d9d9;
-    color: #464646;
+    color: white;
     border-radius: 8px;
     font-size: 0.6rem;
     padding: 5px;
