--- a/Proyecto1/storage/assets/css/project.css
+++ b/Proyecto1/storage/assets/css/project.css
@@ -20,6 +20,37 @@ main {
 }
 
 /*  SELECT PROYECTOS    */
+#select-container {
+    display: flex;
+    gap: 20px;
+    gap: 20px;
+}
+
+#select-container > a {
+    margin-top: auto;
+    margin-bottom: auto;
+
+    color: var(--color-link);
+    transition: all 400ms;
+}
+
+#select-container > a:hover {
+    color: var(--color-link-hover);
+}
+
+#update-project {
+    margin-left: auto;
+    background-color: var(--color-primary);
+    padding: 10px 25px;
+    border-radius: 10px;
+
+    transition: all 400ms;
+}
+
+#update-project:hover {
+    background-color: var(--color-primary-hover);
+}
+
 select {
     background-color: var(--color-background);
     cursor: pointer;
@@ -237,6 +268,8 @@ option:hover {
     display: grid;
     grid-template-columns: 1.5fr 2.5fr 1fr 1fr 2fr 2fr 1.5fr;
     gap: 0;
+
+    transition: all 300ms;
 }
 
 .task-backlog:first-child {
@@ -250,7 +283,7 @@ option:hover {
 }
 
 .task-backlog:hover {
-    background-color: rgb(234, 234, 234);
+    background-color: rgb(221, 221, 221);
 }
 
 .task-backlog span {
@@ -264,12 +297,15 @@ option:hover {
 
     display: flex;
     align-items: center;
+
+    color: #323232;
 }
 
 .task-backlog:first-child span {
     display: flex;
     text-align: center;
     justify-content: center;
+    color: var(--color-white);
 }
 
 .task-backlog span:first-child {
@@ -286,7 +322,32 @@ option:hover {
 
 /*  MEMBERS CONTAINER */
 
-.content-section-4 {
+.integrantes {
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 1rem;
+}
+
+.add-to-project-container {
+    display: flex;
+    gap: 10px;
+}
+
+.add-btn {
+    padding: 8px 25px;
+    color: var(--color-dark);
+    background-color: var(--color-primary);
+    border-radius: 10px;
+    transition: all 400ms;
+}
+
+.add-btn:hover {
+    background-color: var(--color-primary-hover);
+}
+
+#member-container {
+    margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1rem;
